fix: Add tranlations and update project settings page layout

--- a/packages/editor-ui/src/plugins/i18n/locales/en.json
+++ b/packages/editor-ui/src/plugins/i18n/locales/en.json
@@ -2272,6 +2272,17 @@
 	"settings.mfa.title": "Multi-factor Authentication",
 	"settings.mfa.updateConfiguration": "MFA configuration updated",
 	"settings.mfa.invalidAuthenticatorCode": "Invalid authenticator code",
+	"projects.menu.home": "Home",
+	"projects.menu.addProject": "Add project",
+	"projects.settings.newProjectName": "My project",
+	"projects.settings.projectName": "Project name",
+	"projects.settings.projectMembers": "Project members",
+	"projects.settings.message.unsavedChanges": "You have unsaved changes",
+	"projects.settings.message.cannotBeUndone": "This action is permanent and cannot be undone.",
+	"projects.settings.title.deleteProject": "Delete project?",
+	"projects.settings.button.save": "@:_reusableBaseText.save",
+	"projects.settings.button.cancel": "@:_reusableBaseText.cancel",
+	"projects.settings.button.deleteProject": "Delete project",
 	"mfa.setup.invalidAuthenticatorCode": "{code} is not a valid number",
 	"mfa.setup.invalidCode": "Two-factor code failed. Please try again.",
 	"mfa.code.modal.title": "Two-factor authentication",
