--- a/packages/editor-ui/src/plugins/i18n/locales/en.json
+++ b/packages/editor-ui/src/plugins/i18n/locales/en.json
@@ -2275,7 +2275,7 @@
 	"projects.menu.home": "Home",
 	"projects.menu.addProject": "Add project",
 	"projects.settings.newProjectName": "My project",
-	"projects.settings.projectName": "Project name",
+	"projects.settings.name": "Project name",
 	"projects.settings.projectMembers": "Project members",
 	"projects.settings.message.unsavedChanges": "You have unsaved changes",
 	"projects.settings.message.cannotBeUndone": "This action is permanent and cannot be undone.",
@@ -2283,6 +2283,10 @@
 	"projects.settings.button.save": "@:_reusableBaseText.save",
 	"projects.settings.button.cancel": "@:_reusableBaseText.cancel",
 	"projects.settings.button.deleteProject": "Delete project",
+	"projects.settings.role.admin": "Admin",
+	"projects.settings.role.editor": "Editor",
+	"projects.settings.role.viewer": "Viewer",
+	"projects.settings.removeAccess": "Remove access",
 	"mfa.setup.invalidAuthenticatorCode": "{code} is not a valid number",
 	"mfa.setup.invalidCode": "Two-factor code failed. Please try again.",
 	"mfa.code.modal.title": "Two-factor authentication",
